# OpenJIA

./: .env.example  .gitignore  CHANGELOG.md  README.md  VCH_DeepAgents_Harness_Implementation_Spec.md  pyproject.toml  vch-harness-docs-harness-design-princip-zazzy-valley.md
vch-harness/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
vch-harness/.harness/: ENV_REPORT.md  FEATURE_LEDGER.json  FEATURE_SPEC.json  GLOBAL_CONSTRAINTS.md  PROGRESS.md  REPO_MAP.md  REQUIREMENTS.md  ROADMAP.md  RUN.md  RUN_STATE.json
vch-harness/.harness/memory/: ARCHITECTURE_NOTES.md  DECISIONS.md  KNOWN_FAILURES.md  PROJECT_RULES.md
vch-harness/docs/: END_TO_END_EXECUTION_PLAN.md  HARNESS_DESIGN_PRINCIPLES.md  HARNESS_IMPROVEMENT_PLAN.md
vch-harness/src/vch/: __init__.py  bootstrapper.py  cli.py  config.py  evidence.py  feature_ledger.py  llm.py  orchestrator.py
vch-harness/src/vch/agents/: __init__.py  evaluator.py  generator.py  initializer.py  planner.py  qa.py
vch-harness/src/vch/context/: __init__.py  curator.py  generator_packet.py  manifest.py
vch-harness/src/vch/gates/: __init__.py  contract_gate.py  (+4 more)
vch-harness/tests/: __init__.py
vch-harness/tests/integration/: test_simple_bugfix_flow.py  test_todo_web_flow.py
vch-harness/tests/unit/: test_acceptance_coverage.py  test_bootstrapper.py  test_context_curator.py  test_contract_gate.py  test_eval_report_schema.py  test_evaluator_command_ledger.py  test_evidence_collector.py  test_failure_classifier.py  test_feature_ledger.py  test_generator_packet.py  test_guarded_filesystem.py  test_llm_generator.py  test_llm_planner.py  test_plan_feasibility.py  test_planner.py  test_prompt_loader.py  test_self_verify.py
(+99 files in other folders)
